syntax = "proto3";

option go_package = "./proto";

package proto;

service TestService {
  rpc Simple (SimpleReq) returns (SimpleResp) {}
}

message SimpleReq {
  int32 number = 1;
}

message SimpleResp {
  string response = 1;
}
